--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.3",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.3.21",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
