--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.21",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-dates": "^21.8.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
